k8s/np_wp-mysql.yml
kind: NetworkPolicy

apiVersion: networking.k8s.io/v1

metadata:
  name: api-allow

spec:
  podSelector:
    matchLabels:
      app: mysqldb

  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: wp
